# QuicProxy

./: .gitignore  Cargo.toml  Makefile  ReadMe.md  linux_install.sh
.github/workflows/: build.yml  release.yml
assets/: quicproxy.service  server.json  windows_setup.iss
assets/example_config/: client.json5  server.json5
doc/: linux.md
src/: bootstrap.rs  lib.rs  main.rs
src/api/: common.rs  core_api.rs  core_manager.rs  management.rs  mod.rs  persist_handler.rs  persist_store.rs  reverse_proxy.rs  static_files.rs
src/cache/: mod.rs  redb_store.rs
src/config/: mod.rs
src/dns/: mod.rs
src/proxy/: mod.rs  observe.rs  router.rs  shadowquic_udp.rs
src/proxy/inbound/: anytls.rs  http.rs  mix.rs  mod.rs  shadowquic.rs  socks5.rs  trojan.rs
src/proxy/outbound/: anytls.rs  direct.rs  dns.rs  http.rs  mod.rs  pool.rs  selector.rs  shadowquic.rs  socks5.rs  trojan.rs
src/proxy/outbound/shadowsocks/: datagram.rs  mod.rs  stream.rs
src/proxy/outbound/vmess/: mod.rs
src/proxy/outbound/vmess/vmess_impl/: cipher.rs  client.rs  datagram.rs  header.rs  kdf.rs  mod.rs  stream.rs  user.rs
src/proxy/router/: geoip.rs  geoip_db.rs  observe.rs  rule.rs
src/utils/: cache.rs  count_traffic.rs  http_outbound.rs  logging.rs  mod.rs  redb_store.rs  shutdown.rs  system.rs  system_proxy.rs  time.rs
src/utils/elevate/: mod.rs
src/utils/interface/: mod.rs  platform_linux.rs  platform_macos.rs  platform_other.rs  platform_windows.rs
src/utils/quic_wrap/: mod.rs  quinn_wrap.rs
src/utils/socket/: mod.rs  socket_helpers.rs
src/utils/socket/platform/: apple.rs  mod.rs  unix.rs  win.rs
tests/: bind_test.rs  integration_test.rs  shadowquic_test.rs  socks5_udp_test.rs  test_config.json  test_dns.rs  test_http3.json5  trojan_test.rs
tests/common/: mod.rs
