[package]
name = "quicproxy"
version = "0.1.0"
edition = "2024"

[features]
default = ["quinn","premium"]
quinn = []
mimalloc = ["dep:mimalloc"]
snmalloc = ["dep:snmalloc-rs"]
jni = ["dep:jni"]
premium = ["dep:tun-rs"]

[lib]
name = "quicproxy"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
jni = { version = "0.21.1", optional = true }
mimalloc = { version = "0.1.43", optional = true, default-features = false }
snmalloc-rs = { version = "0.3", optional = true }
async-trait = "0.1.89"
bytes = "1.11.0"
clap = { version = "4.5.54", features = ["derive"] }
hex = "0.4.3"
base64 = "0.22"
simple-dns = "0.7.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "socks"] }
hyper = { version = "1.7.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.17", features = ["client", "http1", "tokio"] }
http-body-util = "0.1.3"
rand = "0.8"
lru = "0.12"
httparse = "1.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_json5 = "0.2.1"
serde_path_to_error = "0.1"
sha2 = "0.10.9"
socket2 = "0.6.1"
tokio = { version = "1.49.0", features = ["full", "test-util"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
quinn = { package = "quinn", git = "https://github.com/spongebob888/quinn-jls", tag = "jls-0.3.3", default-features = false, features = ["runtime-tokio", "rustls-ring"]}
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }
rustls-pemfile = "2.1"
webpki-roots = "0.26"
futures = "0.3.31"
bytesize = "2.3.1"
dashmap = "6.1.0"
maxminddb = { version = "0.27.1", features = ["mmap"] }
memmap2 = "0.9.9"
tracing-appender = "0.2.4"
hashbrown = { version = "0.15.2", features = ["serde"] }
ipnet = "2.11.0"
netstack-lwip = { git = "https://github.com/eycorsican/netstack-lwip" }
tun-rs = { version = "2", features = ["async", "async_framed", "utun_fd"], optional = true, git = "https://github.com/tun-rs/tun-rs", tag = "2.8.3" }
netdev = "0.43"
etherparse = "0.13"
libc = "0.2.180"
tokio-rustls = "0.26.4"
anyhow = { version = "1.0.101", features = ["backtrace"] }
tracing-error = "0.2"
redb = "3.1.0"
axum = "0.8.8"
uuid = { version = "1.21.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
rcgen = "0.14.7"
flume = "0.12.0"
tokio-util = "0.7.18"
md5 = "0.8.0"
digest = "0.10"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
crc32fast = "1"
hmac = "0.12"
aead = "0.5"
const-fnv1a-hash = "1.0"
cfb-mode = "0.8"
aes = "0.8"
shadowsocks = { version = "1.23", features = ["aead-cipher-2022", "stream-cipher"] }
[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2.0"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc2 = "0.5.2"
block2 = "0.5.1"
core-foundation = "0.10.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.1", features = ["Win32_Foundation", "Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis", "Win32_NetworkManagement_Rras", "Win32_Networking_WinSock"] }
windows-sys = { version = "0.61.2", features = ["Win32_Networking_WinSock", "Win32_Foundation", "Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis"] }


# [profile.release]
# panic = "unwind"
# lto = true
# codegen-units = 1
# opt-level = 3
# strip = true

[profile.dev]
panic = "unwind"

[dev-dependencies]
tempfile = "3.24.0"
